# ImgFlipper

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  run.py
native/android/: README.md  settings.gradle.kts
native/android/app/: build.gradle.kts
native/android/app/src/main/: AndroidManifest.xml
native/android/app/src/main/java/com/flipformat/viewer/: FlipFile.kt  MainActivity.kt
native/android/app/src/main/java/com/flipformat/viewer/ui/: FlipViewerApp.kt
native/android/app/src/main/java/com/flipformat/viewer/ui/theme/: Theme.kt
native/android/app/src/main/res/values/: themes.xml
native/android/app/src/main/res/xml/: file_paths.xml
native/desktop/: README.md  package.json
native/desktop/src-tauri/: Cargo.toml  tauri.conf.json
native/desktop/src-tauri/src/: main.rs
native/ios/: README.md
native/ios/FlipViewer/FlipViewer/: ContentView.swift  FlipStore.swift  FlipViewerApp.swift  Info.plist
native/ios/FlipViewer/FlipViewer.xcodeproj/: project.pbxproj
spec/: FLIP_FORMAT_SPEC.md
src/flipformat/: __init__.py  __main__.py  autocrop.py  cli.py  flip_file.py  image_io.py  smartmeta.py
tests/: test_flip.py
viewer/: capture.html  index.html  manifest.json  sw.js
