[package]
name = "flipviewer"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-open", "dialog-save", "fs-read-file", "path-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
